radeon: Update unaligned offset for 2D->1D tiling transition on SI

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=71983

Tested-by: Arek Ruśniak <arek.rusi@gmail.com>